Fix imports hvor reactive-streams var implisitt avhengighet i fjernet avhengighet

--- a/domene/pom.xml
+++ b/domene/pom.xml
@@ -111,6 +111,10 @@
         </dependency>
 
         <dependency>
+            <groupId>org.reactivestreams</groupId>
+            <artifactId>reactive-streams</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.neovisionaries</groupId>
             <artifactId>nv-i18n</artifactId>
             <version>${nv.version}</version>
