TFP-5883: Oppdaterer kontrakt slik at autogeneret dto i frontend blir riktig + små fiks på v2 for foreldrepenger

--- a/kontrakt/pom.xml
+++ b/kontrakt/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-common</artifactId>
+            <version>${springdoc.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
