--- a/.editorconfig
+++ b/.editorconfig
@@ -47,10 +47,10 @@ ij_java_align_multiline_text_blocks = false
 ij_java_align_multiline_throws_list = false
 ij_java_align_subsequent_simple_methods = false
 ij_java_align_throws_keyword = false
-ij_java_annotation_parameter_wrap = off
-ij_java_array_initializer_new_line_after_left_brace = false
+ij_java_annotation_parameter_wrap = on_every_item
+ij_java_array_initializer_wrap = on_every_item
+ij_java_array_initializer_new_line_after_left_brace = true
 ij_java_array_initializer_right_brace_on_new_line = false
-ij_java_array_initializer_wrap = off
 ij_java_assert_statement_colon_on_next_line = false
 ij_java_assert_statement_wrap = off
 ij_java_assignment_wrap = off
@@ -74,7 +74,7 @@ ij_java_block_brace_style = end_of_line
 ij_java_block_comment_at_first_column = true
 ij_java_call_parameters_new_line_after_left_paren = false
 ij_java_call_parameters_right_paren_on_new_line = false
-ij_java_call_parameters_wrap = normal
+ij_java_call_parameters_wrap = on_every_item
 ij_java_case_statement_on_separate_line = true
 ij_java_catch_on_new_line = false
 ij_java_class_annotation_wrap = split_into_lines
@@ -164,7 +164,7 @@ ij_java_parentheses_expression_right_paren_on_new_line = false
 ij_java_place_assignment_sign_on_next_line = false
 ij_java_prefer_longer_names = true
 ij_java_prefer_parameters_wrap = false
-ij_java_record_components_wrap = normal
+ij_java_record_components_wrap = on_every_item
 ij_java_repeat_synchronized = true
 ij_java_replace_instanceof_and_cast = false
 ij_java_replace_null_check = true
@@ -271,7 +271,7 @@ ij_java_while_brace_force = always
 ij_java_while_on_new_line = false
 ij_java_wrap_comments = false
 ij_java_wrap_first_method_in_call_chain = false
-ij_java_wrap_long_lines = false
+ij_java_wrap_long_lines = true
 
 [pom.xml]
 charset = utf-8
